# CodeHub

./: .gitignore  .markdownlint.json  CodeHub.sln  README.md
_interview/: pwc-preparation.md
_interview/pwc-dotnet-developer/: pwc_questions.md
basics/: 1.1.1.cpu-example-1.md  1.3.vcpu.md  2.1.ram-stack-heap.md  2.2.communication-between-cpu-ram-in-depth.md
core/computer-components/: 1.1.0.cpu-core-thread.md  1.1.2.cpu-example-2.md  1.2.how-app-is-executed.md
csharp/documentations/: 1.1.dotnet-environment.md
languages/dotnet/: README.md
machine-learning-tools/: README.md  alternative-for-hadoop.md  why-don't-learn-hadoop.md
mysql/docs/: 1.1.2.mysql.docker-compose.window.yaml
nodejs/documentations/: 1.1.node-installing.md
nosql/docs/: 1.what-is-nosql.md  2.3.document-wired_tiger-engine.md
playground/java/: .classpath  .project
postgres/docs/: 1.1.1.setup.md  1.1.2.psql.docker-compose.window.yaml  1.2.pg-wal.md  1.3.pg-architecture.md  1.4.pg-architecture.md
powershell/: README.md
powershell/docs/: .problem-1.md  1.1.pwsh.md  1.5.pwsh-pipe.md  6.pwsh-manage-users-and-groups.md
powershell/documentations/: .t.o.c.md  1.2.pwsh.variables-and-data_types.md  1.4.pwsh.functions.md  1.6.pwsh.oop.md  1.7.pwsh.working-with-objects.md  1.pwc-execution-policy.md  2.1.pwsh.files-and-directories.md  2.2.pwsh.file-permissions.md  3.pwsh.process-and-service-management.md  4.1.pwch.scripting.md  4.2.pwsh.profile-script.md  (+6 more)
python/projects/working-with-postgres/: README.md  pyproject.toml
restapi/: README.md
shellscript/: README.md
sql/: README.md
(+259 files in other folders)
