[project]
name = "working-with-postgres"
version = "0.1.0"
description = "this project will explain how to connect to postgres databases using psycopg (raw_sql) and using sqlalchemy (ORM)"
authors = [{ name = "hady", email = "hadywafa@outlook.com" }]
readme = "README.md"
# requires-python = ">=3.13"
dependencies = ["pydantic (>=2.10.6,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
psycopg = "^3.1.0"
sqlalchemy = "^2.0.38"
ipython = "^8.14.0"

[tool.poetry.group.dev.dependencies]
